Reader: Fix Follow count and button wrapping in full-post

--- a/client/blocks/author-compact-profile/style.scss
+++ b/client/blocks/author-compact-profile/style.scss
@@ -1,42 +1,42 @@
 .author-compact-profile {
-	font-size: 14px;
+    font-size: 14px;
 
-	.gravatar {
-    	display: flex;
-    	margin: auto;
+    .gravatar {
+        display: flex;
+        margin: auto;
     }
 
     .follow-button {
-    	border: 0;
-    	border-radius: 0;
-    	padding: 0;
+        border: 0;
+        border-radius: 0;
+        padding: 0;
 
-    	.gridicon__follow {
-    		fill: $blue-medium;
-    	}
+        .gridicon__follow {
+            fill: $blue-medium;
+        }
 
-    	.follow-button__label {
-    		color: $blue-medium;
+        .follow-button__label {
+            color: $blue-medium;
 
 
-    		@include breakpoint( "<660px" ) {
-    			display: inline-block;
-    		}
-    	}
+            @include breakpoint( "<660px" ) {
+                display: inline-block;
+            }
+        }
 
-		&.is-following .follow-button__label {
-			color: $alert-green;
-		}
+        &.is-following .follow-button__label {
+            color: $alert-green;
+        }
 
-		&:hover {
-			.gridicon__follow {
-				fill: lighten( $gray, 10% );
-			}
+        &:hover {
+            .gridicon__follow {
+                fill: lighten( $gray, 10% );
+            }
 
-			.follow-button__label {
-				color: lighten( $gray, 10% );
-			}
-		}
+            .follow-button__label {
+                color: lighten( $gray, 10% );
+            }
+        }
 
         // No hover if already following
         &.is-following {
@@ -70,25 +70,27 @@
     justify-content: center;
 
     &:hover {
-    	color: lighten( $gray, 10% );
+        color: lighten( $gray, 10% );
     }
 }
 
 .author-compact-profile .reader-author-link,
 .author-compact-profile__site-link {
-	font-weight: 600;
-	margin-top: 18px;
+    font-weight: 600;
+    margin-top: 18px;
 }
 
 .author-compact-profile__follow {
-	margin: 11px 0;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 11px 0;
+
+    .follow-button {
+        padding: 5px;
+    }
 }
 
 .author-compact-profile__follow-count {
-	display: inline-flex;
-}
-
-.author-compact-profile__follow-count {
-	color: lighten( $gray, 10% );
-	margin-right: 15px;
+    color: lighten( $gray, 10% );
+    padding: 5px;
 }
